[gd_scene load_steps=2 format=3 uid="uid://b0gjo88aimvif"]

[ext_resource type="Script" uid="uid://5c6nn4tjfqwq" path="res://pause_menu.gd" id="1_hdmo1"]

[node name="PauseMenu" type="CanvasLayer"]
layer = 100

[node name="PauseMenuLayout" type="Control" parent="."]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hdmo1")

[node name="ColorRect" type="ColorRect" parent="PauseMenuLayout"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0, 0, 0.521569)

[node name="VBoxContainer" type="VBoxContainer" parent="PauseMenuLayout"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -105.5
offset_top = -68.5
offset_right = 105.5
offset_bottom = 68.5
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 30
alignment = 1

[node name="ResumeButton" type="Button" parent="PauseMenuLayout/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Resume"

[node name="MainMenuButton" type="Button" parent="PauseMenuLayout/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Main Menu"

[node name="QuitGameButton" type="Button" parent="PauseMenuLayout/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 25
text = "Quit Game"

[connection signal="pressed" from="PauseMenuLayout/VBoxContainer/ResumeButton" to="PauseMenuLayout" method="_on_resume_button_pressed"]
[connection signal="pressed" from="PauseMenuLayout/VBoxContainer/MainMenuButton" to="PauseMenuLayout" method="_on_main_menu_button_pressed"]
[connection signal="pressed" from="PauseMenuLayout/VBoxContainer/QuitGameButton" to="PauseMenuLayout" method="_on_quit_game_button_pressed"]
